--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -18,6 +18,14 @@
   font-size: 20px;
 }
 
+.header{
+  background-color: #FFF8F3;
+  background-image: url(../images/header_bg.png), url(../images/developer.png);
+  background-repeat: no-repeat;
+  /* background-position: bottom right, left; */
+  background-position: 100% 100% , 0%;
+}
+
 /*  header and navigation styles */
 nav {
   display: flex;
@@ -38,4 +46,32 @@ nav ul {
 nav li {
   list-style: none;
   margin-left: 51px;
+}
+.nav-list{
+  color: #474747;
+  font-size: 20px;
+}
+
+/*  banner styles */
+.banner {
+  margin: 0 200px;
+  display: flex;
+  align-items: center;
+}
+.banner-sub-title {
+  font-weight: 600;
+  font-size: 45px;
+  color: #474747;
+  margin-bottom: 5px;
+}
+.banner-title{
+  font-weight: 700;
+  font-size: 67px;
+  color: #181818;
+  margin-bottom: 20px;
+}
+.banner-description{
+  font-size: 18px;
+  color: #757575;
+  margin-bottom: 30px;
 }
