--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -54,7 +54,7 @@ nav li {
 
 /*  banner styles */
 .banner {
-  margin: 0 200px;
+  margin: 0 20px 0 200px;
   display: flex;
   align-items: center;
 }
@@ -66,7 +66,7 @@ nav li {
 }
 .banner-title{
   font-weight: 700;
-  font-size: 67px;
+  font-size: 85px;
   color: #181818;
   margin-bottom: 20px;
 }
