--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -81,16 +81,18 @@ main{
   max-width: 1140px;
   margin: 0 auto;
 }
+
 /* about section styles */
+
 .about{
   margin-top: 130px;
   background-color: #FFF8F3;
   border-radius: 10px;
   padding: 130px 150px;  
   text-align: center;
-  
 }
 .section-title{
+  text-align: center;
   color: #181818;
   font-weight: 700;
   font-size: 35px;
@@ -102,7 +104,6 @@ main{
   margin-bottom: 30px;
 }
 
-/* about section styles */
 .about-info-container{
   display: flex;
   justify-content: space-around;
@@ -115,4 +116,36 @@ main{
   font-weight: 700;
   font-size: 20px;
   color: #474747;
+}
+
+/* what i do section styles */
+
+.what-i-do{
+  margin-top: 130px;
+}
+.what-i-do .section-description{
+  width: 910px;
+  margin: 0 auto;
+  text-align: center;
+  margin-bottom: 50px;
+}
+.skills-container{
+  display: flex;
+  gap: 24px;
+}
+.skill{
+  background-color: #FFFFFF;
+  box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+  border-radius: 5px;
+  padding: 30px;
+  height: 300px;
+}
+.skill-title{
+  font-weight: 700;
+  font-size: 20px;
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
+.skill-description{
+  color: #757575;
 }
