--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -27,6 +27,7 @@
 }
 
 /*  header and navigation styles */
+
 nav {
   display: flex;
   justify-content: space-between;
@@ -53,6 +54,7 @@ nav li {
 }
 
 /*  banner styles */
+
 .banner {
   margin: 0 20px 0 200px;
   display: flex;
@@ -77,11 +79,15 @@ nav li {
 }
 
 /* main section */
+
 main{
   max-width: 1140px;
   margin: 0 auto;
 }
 
+section{
+  margin-top: 130px;
+}
 /* about section styles */
 
 .about{
@@ -120,9 +126,6 @@ main{
 
 /* what i do section styles */
 
-.what-i-do{
-  margin-top: 130px;
-}
 .what-i-do .section-description{
   width: 910px;
   margin: 0 auto;
@@ -135,7 +138,7 @@ main{
 }
 .skill{
   background-color: #FFFFFF;
-  box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+  box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.10);
   border-radius: 5px;
   padding: 30px;
   height: 300px;
@@ -148,4 +151,46 @@ main{
 }
 .skill-description{
   color: #757575;
+}
+
+/* Resume styles */
+
+.resume .section-title{
+  margin-bottom: 100px;
+}
+.resume-content{
+  display: flex;
+  gap: 24px;
+}
+.resume-title{
+  font-weight: 700;
+  font-size: 30px;
+  color: #474747;
+}
+.resume-item{
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+.resume .title{
+  font-weight: 700;
+  font-size: 25px;
+  color: #474747;
+}
+.resume .sub-title{
+  font-weight: 600;
+  font-size: 20px;
+  color: #757575;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+.resume .description{
+  padding-right: 70px;
+  color: #757575;
+}
+hr{
+  border: 1px solid #D1D1D1;
+}
+.resume-button{
+  margin-top: 50px;
+  text-align: center;
 }
