--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -137,8 +137,8 @@ section{
 /* what i do section styles */
 
 .what-i-do .section-description{
-  width: 910px;
-  margin: 0 auto;
+  padding-left: 150px;
+  padding-right: 150px;
   text-align: center;
   margin-bottom: 50px;
 }
@@ -207,7 +207,7 @@ hr{
 
 /* contact styles */
 
-.contact{
+/* .contact{
   display: flex;
   gap: 120px;
   background: #FFF8F3;
@@ -245,4 +245,101 @@ textarea{
 }
 .message{
   width: 65%;
+} */
+.contact{
+  display: flex;
+  gap: 120px;
+  background-color: #FFF8F3;
+  padding: 130px 180px;
+  height: 450px;
+}
+.contact .section-description{
+  font-size: 16px;
+  color: #474747;
+  margin-bottom: 30px;
+}
+.connect .section-title{
+  text-align: left;
+  margin-bottom: 28px;
+}
+.contact a{
+  text-decoration: none;
+  margin-right: 24px;
+}
+.message .section-title{
+  text-align: left;
+  margin-bottom: 28px;
+}
+.contact input[type="text"], input[type="email"]{
+  margin-bottom: 24px;
+  border: 0;
+  width: 100%;
+  height: 40px;
+  padding: 18px 30px;
+  color: #757575;
+}
+textarea{
+  margin-bottom: 24px;
+  border: 0;
+  width: 100%;
+  height: 150px;
+  padding: 18px 30px;
+  color: #757575;
+}
+
+@media screen and (max-width: 576px) {
+  .header{
+    background-image: none;
+    flex-direction: column;
+  }
+  nav{
+    flex-direction: column;
+  }
+  nav ul{
+    flex-direction: column;
+    gap: 20px;
+    margin-top: 20px;
+  }
+  .banner{
+    flex-direction: column-reverse;
+    padding: 15px;
+    gap: 20px;
+    margin: 0 0 0 20px;
+  }
+  .banner img{
+    width: 100%;
+  }
+  .header .btn-primary{
+    width: 145px;
+  }
+  .btn .btn-primary{
+    width: 220px;
+    margin-bottom: 30px;
+    margin-right: 100px;
+  }
+  .what-i-do .section-description{
+    padding: 15px;
+  }
+  .skills-container{
+    flex-direction: column;
+  }
+  .about{
+    padding: 15px;
+  }
+  .about-info-container{
+    flex-direction: column;
+  }
+  .about-info{
+    margin-bottom: 5px;
+  }
+  .resume-content{
+    flex-direction: column;
+    padding: 15px;
+  }
+  .contact{
+    margin: 70px 0 50px 0;
+    padding: 15px;
+    flex-direction: column;
+    height: auto;
+  }
 }
